2007-10-31  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-search-engine-simple.c:
	Update to changed gio API

2007-10-31  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-vfs-utils.[ch]:
	Remove more unused gnome-vfs helpers

2007-10-31  Alexander Larsson  <alexl@redhat.com>

	* src/file-manager/fm-icon-view.c (play_file):
	Use a better pipeline for audio preview (doesn't play videos)
	Add back totem preview app.

        * libnautilus-private/nautilus-file.c:
        (nautilus_file_get_volume_name):
	Get volume name using gio
	
        * src/file-manager/fm-properties-window.c:
	Show volume name for non local files too
	Avoid crashes if query fsinfo fails

2007-10-30  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-program-choosing.c:
        (nautilus_launch_show_file):
	Avoid gnome_vfs calls

2007-10-30  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-icon-canvas-item.c:
        (real_map_pixbuf):
	Fix indentation
	
        * src/file-manager/Makefile.am:
        * src/file-manager/fm-icon-view.c:
        * src/file-manager/nautilus-audio-mime-types.h:
	Replace audio preview code with new one based
	on gst-launch, removing all the gnome-vfs code

2007-10-29  Alexander Larsson  <alexl@redhat.com>

	* libnautilus-private/nautilus-dnd.c:
	Remove gnome-vfs code

2007-10-29  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-file-utilities.[ch]:
        * libnautilus-private/nautilus-file-operations.c:
	Move public gnome-vfs functions from file-utilities to internal
	calls in file-operations.c
	Replace gnome-vfs use with gio
	
        * libnautilus-private/nautilus-file-operations-progress.c:
        * src/file-manager/fm-tree-view.c:
	Replace gnome-vfs use with gio

2007-10-29  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-file-operations.[ch]: